# gui-monorepo

./: .gitmodules  CMakeLists.txt  CMakePresets.json  HelperFunctions.cmake  README.md
